@@ -189,6 +189,24 @@ name|module
 operator|.
 name|descriptor
 operator|.
+name|ExtendsDescriptor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|module
+operator|.
+name|descriptor
+operator|.
 name|ModuleDescriptor
 import|;
 end_import
@@ -1698,6 +1716,229 @@ argument_list|(
 literal|"ivy.revision"
 argument_list|,
 name|mdRev
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|md
+operator|.
+name|getInheritedDescriptors
+argument_list|()
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|ExtendsDescriptor
+name|parent
+init|=
+name|md
+operator|.
+name|getInheritedDescriptors
+argument_list|()
+index|[
+name|i
+index|]
+decl_stmt|;
+name|String
+name|parentOrg
+init|=
+name|parent
+operator|.
+name|getResolvedParentRevisionId
+argument_list|()
+operator|.
+name|getOrganisation
+argument_list|()
+decl_stmt|;
+name|String
+name|parentModule
+init|=
+name|parent
+operator|.
+name|getResolvedParentRevisionId
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+decl_stmt|;
+name|String
+name|parentRevision
+init|=
+name|parent
+operator|.
+name|getResolvedParentRevisionId
+argument_list|()
+operator|.
+name|getRevision
+argument_list|()
+decl_stmt|;
+name|String
+name|parentBranch
+init|=
+name|parent
+operator|.
+name|getResolvedParentRevisionId
+argument_list|()
+operator|.
+name|getBranch
+argument_list|()
+decl_stmt|;
+name|getProject
+argument_list|()
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.parent["
+operator|+
+name|i
+operator|+
+literal|"].organisation"
+argument_list|,
+name|parentOrg
+argument_list|)
+expr_stmt|;
+name|settings
+operator|.
+name|setVariable
+argument_list|(
+literal|"ivy.parent["
+operator|+
+name|i
+operator|+
+literal|"].organisation"
+argument_list|,
+name|parentOrg
+argument_list|)
+expr_stmt|;
+name|getProject
+argument_list|()
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.parent["
+operator|+
+name|i
+operator|+
+literal|"].module"
+argument_list|,
+name|parentModule
+argument_list|)
+expr_stmt|;
+name|settings
+operator|.
+name|setVariable
+argument_list|(
+literal|"ivy.parent["
+operator|+
+name|i
+operator|+
+literal|"].module"
+argument_list|,
+name|parentModule
+argument_list|)
+expr_stmt|;
+name|getProject
+argument_list|()
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.parent["
+operator|+
+name|i
+operator|+
+literal|"].revision"
+argument_list|,
+name|parentRevision
+argument_list|)
+expr_stmt|;
+name|settings
+operator|.
+name|setVariable
+argument_list|(
+literal|"ivy.parent["
+operator|+
+name|i
+operator|+
+literal|"].revision"
+argument_list|,
+name|parentRevision
+argument_list|)
+expr_stmt|;
+name|getProject
+argument_list|()
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.parent["
+operator|+
+name|i
+operator|+
+literal|"].branch"
+argument_list|,
+name|parentBranch
+argument_list|)
+expr_stmt|;
+name|settings
+operator|.
+name|setVariable
+argument_list|(
+literal|"ivy.parent["
+operator|+
+name|i
+operator|+
+literal|"].branch"
+argument_list|,
+name|parentBranch
+argument_list|)
+expr_stmt|;
+block|}
+name|getProject
+argument_list|()
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.parents.count"
+argument_list|,
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|md
+operator|.
+name|getInheritedDescriptors
+argument_list|()
+operator|.
+name|length
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|settings
+operator|.
+name|setVariable
+argument_list|(
+literal|"ivy.parents.count"
+argument_list|,
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|md
+operator|.
+name|getInheritedDescriptors
+argument_list|()
+operator|.
+name|length
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|Boolean
