@@ -27,16 +27,6 @@ end_import
 
 begin_import
 import|import
-name|java
-operator|.
-name|util
-operator|.
-name|List
-import|;
-end_import
-
-begin_import
-import|import
 name|junit
 operator|.
 name|framework
@@ -3682,6 +3672,105 @@ parameter_list|)
 block|{
 comment|// ok
 block|}
+block|}
+specifier|public
+name|void
+name|testSimpleExtends
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|resolve
+operator|.
+name|setFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/java/org/apache/ivy/ant/ivy-extends-multiconf.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"1"
+argument_list|,
+name|resolve
+operator|.
+name|getProject
+argument_list|()
+operator|.
+name|getProperty
+argument_list|(
+literal|"ivy.parents.count"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"apache"
+argument_list|,
+name|resolve
+operator|.
+name|getProject
+argument_list|()
+operator|.
+name|getProperty
+argument_list|(
+literal|"ivy.parent[0].organisation"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"resolve-simple"
+argument_list|,
+name|resolve
+operator|.
+name|getProject
+argument_list|()
+operator|.
+name|getProperty
+argument_list|(
+literal|"ivy.parent[0].module"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"1.0"
+argument_list|,
+name|resolve
+operator|.
+name|getProject
+argument_list|()
+operator|.
+name|getProperty
+argument_list|(
+literal|"ivy.parent[0].revision"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|null
+argument_list|,
+name|resolve
+operator|.
+name|getProject
+argument_list|()
+operator|.
+name|getProperty
+argument_list|(
+literal|"ivy.parent[0].branch"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
